[package]
name = "resize"
description = "A simple CLI program for resizing an image with specified width"
version = "0.2.0"
authors = ["minagawa <minag@tokyo800.jp>"]
categories = ["cli", "image", "resize"]
license = "Unlicense or MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
image = "0.24.6"

[profile.release]
opt-level = "s"
lto = true
